fix container z-index

--- a/docs/website/theme/resources/styles/search/input.scss
+++ b/docs/website/theme/resources/styles/search/input.scss
@@ -6,6 +6,7 @@
     padding: 0;
     align-items: normal;
     position: relative;
+    z-index: 100;
     
     #searchbar {
         border: 0;
